hook in animated list

--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "electron-squirrel-startup": "^1.0.1",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "react-native-reanimated": "^4.2.1"
+    "react-native-reanimated": "^4.2.1",
+    "react-spring": "^10.0.3"
   }
 }
