--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "typescript": "~4.5.4"
   },
   "dependencies": {
+    "@react-spring/types": "^10.0.3",
     "electron-squirrel-startup": "^1.0.1",
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
