add slot counter and separate the UI updates

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
     "react-native-reanimated": "^4.2.1",
+    "react-slot-counter": "^3.3.2",
     "react-spring": "^10.0.3"
   }
 }
